# hypergrid

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-test-release.yml
api/: index.html
api/base_classes/: index.html
api/grid_classes/: index.html
api/mixins/: index.html
api/storage/: index.html
api/utilities/: index.html
concepts/: index.html
concepts/binning_rules/: index.html
concepts/distance_metrics/: index.html
concepts/rebinning_strategy/: index.html
concepts/temporal_decay/: index.html
docs/: api.md  concepts.md  index.md
docs/api/: base_classes.md  grid_classes.md  mixins.md  storage.md  utilities.md
docs/concepts/: binning_rules.md  distance_metrics.md  rebinning_strategy.md  temporal_decay.md
docs/examples/: 01_basic.ipynb  02_comparison.ipynb  03_adaptive.ipynb  04_temporal.ipynb
examples/01_basic/: 01_basic.ipynb  index.html
examples/02_comparison/: index.html
examples/03_adaptive/: index.html
examples/04_temporal/: index.html
hypergrid/: __init__.py
hypergrid/base/: __init__.py  _base_tensor.py  adaptive_hypergrid.py  base_hypergrid.py  dense_tensor_hypergrid.py  sparse_tensor_hypergrid.py  static_hypergrid.py  temporal_hypergrid.py
hypergrid/mixin/: __init__.py  comparison_mixin.py  embedding_mixin.py  rebin_mixin.py  stats_mixin.py  visualization_mixin.py
hypergrid/storage/: __init__.py  storage.py
hypergrid/utils/: __init__.py  binning.py
search/: search_index.json
tests/: conftest.py  test_adaptive.py  test_binning.py  test_comparison.py  test_core.py  test_describe.py  test_embedding.py  test_rebin.py  test_storage.py  test_temporal.py
