[project]
name = "hypergrid"
version = "0.1.0"
description = "N-dimensional histogram library for multivariate data — binning, rebinning, comparison, and visualization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5"]
dev  = ["pytest>=7", "ruff"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-jupyter>=0.24",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Repository = "https://github.com/Clems6323/hypergrid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
