[project]
name = "pyHypergrid"
version = "1.0.0"
description = "N-dimensional histogram library for multivariate data — binning, rebinning, comparison, and visualization."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

keywords = [
    "histogram",
    "multivariate",
    "n-dimensional",
    "binning",
    "density estimation",
    "distribution",
    "rebinning",
    "statistics",
    "data analysis",
    "numpy",
    "scipy",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: English",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
umap  = ["umap-learn>=0.5"]
stats = ["pandas>=1.5"]
dev   = ["pytest>=7", "ruff", "pandas>=1.5"]
docs  = [
    "mkdocs>=1.5",
    "mkdocs-jupyter>=0.24",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Repository = "https://github.com/Clems6323/hypergrid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hypergrid"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pytest>=9.0.3",
]
